--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
         <meta name="description" content="Love Running club for runners in Dublin, Ireland">
         <meta name="keywords" content="love running, running club, ireland, dublin">
     
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="/assets/style.css">
         <title>Ireland's National Parks</title>
     </head>
 
     <body>
-        <h1>Ireland's National Parks</h1>
+        <header>
+            <h1>Ireland's National Parks</h1>
+        </header>
+
         <nav>Navigation menu</nav>
 
         <h2>Why Visit?</h2>
