Add and style navigation bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
             <h1>Ireland's National Parks</h1>
         </header>
 
-        <nav>Navigation menu</nav>
+        <nav>
+            <a href="#index.html">Home</a>
+            <a href="#">Killarney National Park 1</a>
+            <a href="#">Glenveah National Park</a>
+            <a href="#">Connemara National Park</a>
+            <a href="#">Burren National Park</a>
+            <a href="#">Wicklow Mountains National Park</a>
+            <a href="#">Wild Nephin National Park</a>
+            <a href="#">The Burren</a>
+            <a href="#">Sign up!</a>
+        </nav>
 
         <h2>Why Visit?</h2>
         <p>Text goes here</p>
