Style why visit paragraph text and images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="love running, running club, ireland, dublin">
     
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="/assets/style.css">
+        <link rel="stylesheet" href="assets/style.css">
         <title>Ireland's National Parks</title>
     </head>
 
@@ -27,9 +27,17 @@
             <a href="#">The Burren</a>
             <a href="#">Sign up!</a>
         </nav>
-
-        <h2>Why Visit?</h2>
-        <p>Text goes here</p>
+        
+        <div id="why-visit">
+            <h2>Why Visit?</h2>
+            <p id="why-visit-p">Ireland is well know for its beautiful landscapes and vivid colors. If you want to use your time well and see some of it's most stunning treasures, explore our website so you don't miss out on anything. Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check-out our webpage and go enjoy your time among natre. And remember, respect the mountains, and keep safe.</p>
+            <img src="/assets/images/why-visit.jpg" alt="Beautiful landscape" id="why-visit-photo">
+            <div>
+                <img src="/assets/images/why-visit-1.jpg" alt="Coastal landscape" class="why-visit-photos">
+                <img src="/assets/images/why-visit-2.jpg" alt="Plains landscape" class="why-visit-photos">
+                <img src="/assets/images/why-visit-3.jpg" alt="Mountain landscape" class="why-visit-photos">
+            </div>
+        </div>
 
         <h2>Where are they?</h2>
         <img src="" alt="">
