Add and style where are they section

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Love Running club for runners in Dublin, Ireland">
-        <meta name="keywords" content="love running, running club, ireland, dublin">
+        <meta name="description" content="Webpage to learn about Ireland's national parks for tourists and hikers">
+        <meta name="keywords" content="hiking, tourism, nature, national parks, ireland">
     
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="assets/style.css">
@@ -29,20 +29,26 @@
         </nav>
         
         <div id="why-visit">
-            <h2>Why Visit?</h2>
+            <h2 class="heading-home">Why Visit?</h2>
             <p id="why-visit-p">Ireland is well know for its beautiful landscapes and vivid colors. If you want to use your time well and see some of it's most stunning treasures, explore our website so you don't miss out on anything. Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check-out our webpage and go enjoy your time among natre. And remember, respect the mountains, and keep safe.</p>
-            <img src="/assets/images/why-visit.jpg" alt="Beautiful landscape" id="why-visit-photo">
+            <img src="assets/images/why-visit.jpg" alt="Beautiful landscape" id="why-visit-photo">
             <div>
-                <img src="/assets/images/why-visit-1.jpg" alt="Coastal landscape" class="why-visit-photos">
-                <img src="/assets/images/why-visit-2.jpg" alt="Plains landscape" class="why-visit-photos">
-                <img src="/assets/images/why-visit-3.jpg" alt="Mountain landscape" class="why-visit-photos">
+                <img src="assets/images/why-visit-1.jpg" alt="Coastal landscape" class="why-visit-photos">
+                <img src="assets/images/why-visit-2.jpg" alt="Plains landscape" class="why-visit-photos">
+                <img src="assets/images/why-visit-3.jpg" alt="Mountain landscape" class="why-visit-photos">
             </div>
         </div>
 
-        <h2>Where are they?</h2>
-        <img src="" alt="">
+        <br>
 
-        <h2>Best time to travel</h2>
+        <div id="where">
+            <h2 class="heading-home">Where are they?</h2>
+            <img src="assets/images/national-parks-map.jpg" alt="Map of Ireland's national parks" id="national-parks-map">
+        </div>
+
+        <br>
+
+        <h2 class="heading-home">Best time to travel</h2>
         <table>
             <th>Table</th>
         </table>
