--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <div id="why-visit">
             <h2 class="heading-home">Why Visit?</h2>
-            <p id="why-visit-p">Ireland is well know for its beautiful landscapes and vivid colors. If you want to use your time well and see some of it's most stunning treasures, explore our website so you don't miss out on anything. Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check-out our webpage and go enjoy your time among natre. And remember, respect the mountains, and keep safe.</p>
+            <p id="why-visit-p">Ireland is well known for its beautiful landscapes and vivid colors. If you want to use your time well and see some of it's most stunning treasures, explore our website so you don't miss out on anything. Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check out our webpage and go enjoy your time among nature. And remember, respect the mountains, and keep safe.</p>
             <img src="assets/images/why-visit.jpg" alt="Beautiful landscape" id="why-visit-photo">
             <div>
                 <img src="assets/images/why-visit-1.jpg" alt="Coastal landscape" class="why-visit-photos">
@@ -48,10 +48,86 @@
 
         <br>
 
+        <div>
         <h2 class="heading-home">Best time to travel</h2>
-        <table>
-            <th>Table</th>
-        </table>
+            <table>
+                <tr>
+                    <th></th>
+                    <th>January</th>
+                    <th>February</th>
+                    <th>March</th>
+                    <th>April</th>
+                    <th>May</th>
+                    <th>June</th>
+                    <th>July</th>
+                    <th>August</th>
+                    <th>September</th>
+                    <th>October</th>
+                    <th>November</th>
+                    <th>December</th>
+                </tr>
+                <tr>
+                    <td>Sunrise Time</td>
+                    <td>8:45-8:17</td>
+                    <td>8:15-7:21</td>
+                    <td>7:19-7:08</td>
+                    <td>7:06-6:01</td>
+                    <td>5:59-5:13</td>
+                    <td>5:12-5:09</td>
+                    <td>5:10-5:48</td>
+                    <td>5:49-6:40</td>
+                    <td>6:41-7:31</td>
+                    <td>7:33-8:16</td>
+                    <td>7:29-8:20</td>
+                    <td>8:22-8:45</td>
+                </tr>
+                <tr>
+                    <td>Sunset Time</td>
+                    <td>16:25-17:14</td>
+                    <td>17:16-18:08</td>
+                    <td>18:10-20:04</td>
+                    <td>20:06-20:58</td>
+                    <td>21:00-21:46</td>
+                    <td>21:47-22:01</td>
+                    <td>22:00-21:27</td>
+                    <td>21:26-20:23</td>
+                    <td>20:20-19:11</td>
+                    <td>19:09-17:02</td>
+                    <td>17:00-16:20</td>
+                    <td>16:19-16:24</td>
+                </tr>
+                <tr>
+                    <td>Average Temperature</td>
+                    <td>5°C</td>
+                    <td>5°C</td>
+                    <td>6°C</td>
+                    <td>8°C</td>
+                    <td>11°C</td>
+                    <td>13°C</td>
+                    <td>15°C</td>
+                    <td>14°C</td>
+                    <td>13°C</td>
+                    <td>10°C</td>
+                    <td>7°C</td>
+                    <td>6°C</td>
+                </tr>
+                <tr>
+                    <td>Average Days of Rain</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>10</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>11</td>
+                    <td>12</td>
+                </tr>
+            </table>
+        </div>
 
     </body>
 
