Style table on home page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <br>
 
-        <div>
+        <div id="table-div">
         <h2 class="heading-home">Best time to travel</h2>
             <table>
                 <tr>
@@ -67,7 +67,7 @@
                     <th>December</th>
                 </tr>
                 <tr>
-                    <td>Sunrise Time</td>
+                    <td><strong>Sunrise Time</strong></td>
                     <td>8:45-8:17</td>
                     <td>8:15-7:21</td>
                     <td>7:19-7:08</td>
@@ -82,7 +82,7 @@
                     <td>8:22-8:45</td>
                 </tr>
                 <tr>
-                    <td>Sunset Time</td>
+                    <td><strong>Sunset Time</strong></td>
                     <td>16:25-17:14</td>
                     <td>17:16-18:08</td>
                     <td>18:10-20:04</td>
@@ -97,7 +97,7 @@
                     <td>16:19-16:24</td>
                 </tr>
                 <tr>
-                    <td>Average Temperature</td>
+                    <td><strong>Average Temperature</strong></td>
                     <td>5°C</td>
                     <td>5°C</td>
                     <td>6°C</td>
@@ -112,7 +112,7 @@
                     <td>6°C</td>
                 </tr>
                 <tr>
-                    <td>Average Days of Rain</td>
+                    <td><strong>Average Days of Rain</strong></td>
                     <td>12</td>
                     <td>10</td>
                     <td>11</td>
