Add and style footer

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
         </header>
 
         <nav>
-            <a href="#index.html">Home</a>
-            <a href="#">Killarney National Park 1</a>
-            <a href="#">Glenveah National Park</a>
-            <a href="#">Connemara National Park</a>
-            <a href="#">Burren National Park</a>
-            <a href="#">Wicklow Mountains National Park</a>
-            <a href="#">Wild Nephin National Park</a>
-            <a href="#">The Burren</a>
-            <a href="#">Sign up!</a>
+            <a href="#index.html" class="nav-a">Home</a>
+            <a href="#" class="nav-a">Killarney National Park 1</a>
+            <a href="#" class="nav-a">Glenveah National Park</a>
+            <a href="#" class="nav-a">Connemara National Park</a>
+            <a href="#" class="nav-a">Burren National Park</a>
+            <a href="#" class="nav-a">Wicklow Mountains National Park</a>
+            <a href="#" class="nav-a">Ballycroy National Park</a>
+            <a href="#" class="nav-a">Sign up!</a>
         </nav>
         
         <div id="why-visit">
@@ -129,9 +128,19 @@
             </table>
         </div>
 
+        <br>
+
+        <footer>
+            <ul class="footer-list">
+                <li id="footer-list-p">Ireland's National Parks</li>
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook footer-a"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram footer-a"></i></a></li>
+                <li><a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter footer-a"></i></a></li>
+            </ul>
+        </footer>
+
+        <!--Font Awesome Script -->
+        <script src="https://kit.fontawesome.com/8b45f7f3ca.js" crossorigin="anonymous"></script>
     </body>
 
-    <footer>
-        <p>Footer</p>
-    </footer>
 </html>
