--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="hiking, tourism, nature, national parks, ireland">
     
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <title>Ireland's National Parks</title>
     </head>
 
@@ -67,33 +67,33 @@
                 </tr>
                 <tr>
                     <td><strong>Sunrise Time</strong></td>
-                    <td>8:45-8:17</td>
-                    <td>8:15-7:21</td>
-                    <td>7:19-7:08</td>
-                    <td>7:06-6:01</td>
-                    <td>5:59-5:13</td>
-                    <td>5:12-5:09</td>
-                    <td>5:10-5:48</td>
-                    <td>5:49-6:40</td>
-                    <td>6:41-7:31</td>
-                    <td>7:33-8:16</td>
-                    <td>7:29-8:20</td>
-                    <td>8:22-8:45</td>
+                    <td><p>8:45</p><p>8:17</p></td>
+                    <td><p>8:15</p><p>7:21</p></td>
+                    <td><p>7:19</p><p>7:08</p></td>
+                    <td><p>7:06</p><p>6:01</p></td>
+                    <td><p>5:59</p><p>5:13</p></td>
+                    <td><p>5:12</p><p>5:09</p></td>
+                    <td><p>5:10</p><p>5:48</p></td>
+                    <td><p>5:49</p><p>6:40</p></td>
+                    <td><p>6:41</p><p>7:31</p></td>
+                    <td><p>7:33</p><p>8:16</p></td>
+                    <td><p>7:29</p><p>8:20</p></td>
+                    <td><p>8:22</p><p>8:45</p></td>
                 </tr>
                 <tr>
                     <td><strong>Sunset Time</strong></td>
-                    <td>16:25-17:14</td>
-                    <td>17:16-18:08</td>
-                    <td>18:10-20:04</td>
-                    <td>20:06-20:58</td>
-                    <td>21:00-21:46</td>
-                    <td>21:47-22:01</td>
-                    <td>22:00-21:27</td>
-                    <td>21:26-20:23</td>
-                    <td>20:20-19:11</td>
-                    <td>19:09-17:02</td>
-                    <td>17:00-16:20</td>
-                    <td>16:19-16:24</td>
+                    <td><p>16:25</p><p>17:14</p></td>
+                    <td><p>17:16</p><p>18:08</p></td>
+                    <td><p>18:10</p><p>20:04</p></td>
+                    <td><p>20:06</p><p>20:58</p></td>
+                    <td><p>21:00</p><p>21:46</p></td>
+                    <td><p>21:47</p><p>22:01</p></td>
+                    <td><p>22:00</p><p>21:27</p></td>
+                    <td><p>21:26</p><p>20:23</p></td>
+                    <td><p>20:20</p><p>19:11</p></td>
+                    <td><p>19:09</p><p>17:02</p></td>
+                    <td><p>17:00</p><p>16:20</p></td>
+                    <td><p>16:19</p><p>16:24</p></td>
                 </tr>
                 <tr>
                     <td><strong>Average Temp.</strong></td>
