Create killarney.html file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <nav>
             <a href="#index.html" class="nav-a">Home</a>
-            <a href="#" class="nav-a">Killarney National Park</a>
+            <a href="#killarney.html" class="nav-a">Killarney National Park</a>
             <a href="#" class="nav-a">Glenveah National Park</a>
             <a href="#" class="nav-a">Connemara National Park</a>
             <a href="#" class="nav-a">Burren National Park</a>
