Create killarney.html basic structure and add iframe and name paragraph

--- a/killarney.html
+++ b/killarney.html
@@ -16,7 +16,56 @@
             <h1>Ireland's National Parks</h1>
         </header>
 
-        
+        <nav>
+            <a href="index.html" class="nav-a">Home</a>
+            <a href="killarney.html" class="nav-a">Killarney National Park</a>
+            <a href="#" class="nav-a">Glenveah National Park</a>
+            <a href="#" class="nav-a">Connemara National Park</a>
+            <a href="#" class="nav-a">Burren National Park</a>
+            <a href="#" class="nav-a">Wicklow Mountains National Park</a>
+            <a href="#" class="nav-a">Ballycroy National Park</a>
+            <a href="#" class="nav-a">Sign up!</a>
+        </nav>
+
+        <div id="name">
+            <h2 id="name-heading">Killarney National Park</h2>
+            <p>South and west of the town of Killarney in Co. Kerry is an expanse of rugged mountainous country. This includes the McGillycuddy’s Reeks, the highest mountain range in Ireland which rise to a height of over 1000 metres. At the foot of these mountains nestle the world famous lakes of Killarney. Here where the mountains sweep down to the lake shores, their lower slopes covered in woodlands, lies the 10,236 hectare (26,000 acres), Killarney National Park . The distinctive combination of mountains, lakes, woods and waterfalls under ever changing skies gives the area a special scenic beauty. Killarney National Park contains many features of national and international importance such as the native oakwoods and yew woods together with an abundance of evergreen trees and shrubs and a profusion of bryophytes and lichens which thrive in the mild Killarney climate. The native red deer are unique in Ireland with a presence in the country since the last Ice Age. Killarney National Park was designated as a Biosphere Reserve in 1981 by the United Nations Educational, Scientific and Cultural Organisation (UNESCO), part of a world network of natural areas which have conservation, research, education and training as major objectives.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.0567014805224!2d-9.5561803!3d52.0058447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453e3ee43de413%3A0x9d8826b96949907a!2sKillarney%20National%20Park!5e0!3m2!1sen!2sie!4v1666913611513!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <h2>Recommended hike: Old Kenmare Road</h2>
+        <ol>
+            <li>Step one</li>
+            <li>Step two</li>
+            <li>Step three</li>
+            <li>Step four</li>
+        </ol>
+        <img src="" alt="">
+
+        <h2>Best things to see</h2>
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
 
         <footer>
             <ul class="footer-list">
