--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <nav>
             <a href="#index.html" class="nav-a">Home</a>
-            <a href="#killarney.html" class="nav-a">Killarney National Park</a>
+            <a href="killarney.html" class="nav-a">Killarney National Park</a>
             <a href="#" class="nav-a">Glenveah National Park</a>
             <a href="#" class="nav-a">Connemara National Park</a>
             <a href="#" class="nav-a">Burren National Park</a>
@@ -28,7 +28,7 @@
         </nav>
 
         <div id="why-visit">
-            <h2 class="heading-home">Why Visit?</h2>
+            <h2>Why Visit?</h2>
             <p id="why-visit-p">Ireland is well known for its beautiful landscapes and vivid colors. If you want to use your time well and see some of it's most stunning treasures, explore our website so you don't miss out on anything. Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check out our webpage and go enjoy your time among nature. And remember, respect the mountains, and keep safe.</p>
             <div id="home-div-photos">
                 <img src="assets/images/why-visit.jpg" alt="Beautiful landscape" class="why-visit-photos">
@@ -41,14 +41,14 @@
         <br>
 
         <div id="where">
-            <h2 class="heading-home">Where are they?</h2>
+            <h2>Where are they?</h2>
             <img src="assets/images/national-parks-map.jpg" alt="Map of Ireland's national parks" id="national-parks-map">
         </div>
 
         <br>
 
         <div id="table-div">
-        <h2 class="heading-home">Best time to travel</h2>
+        <h2>Best time to travel</h2>
             <table>
                 <tr>
                     <th></th>
