Style iframe and recommended hike div

--- a/killarney.html
+++ b/killarney.html
@@ -33,14 +33,23 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.0567014805224!2d-9.5561803!3d52.0058447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453e3ee43de413%3A0x9d8826b96949907a!2sKillarney%20National%20Park!5e0!3m2!1sen!2sie!4v1666913611513!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <h2>Recommended hike: Old Kenmare Road</h2>
+        <div class="recommended">
+        <h2 class="recommended-header">Recommended hike: Old Kenmare Road</h2>
         <ol>
-            <li>Step one</li>
-            <li>Step two</li>
-            <li>Step three</li>
-            <li>Step four</li>
+            <li>Begin at the upper car park of Torc Mountain</li>
+            <li>Follow the trail and head towards the shoulder of Torc Mountain</li>
+            <li>Take an immediate left after crossing a wooden bridge</li>
+            <li>Follow the path as you exit the woodlands</li>
+            <li>Keep following the path through a boarwalked path for a few kilometres</li>
+            <li>As you reach the Cores Cascade head back into the woodlands</li>
+            <li>Folow the path until you reach the paved road</li>
+            <li>Take a left turn</li>
+            <li>Follow the path untul you see a parking lot</li>
+            <li>Your hike has finished!</li>
         </ol>
-        <img src="" alt="">
+        <img id="killarney-hike-map" src="assets/images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
+        </div>
+        <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Click here for more detailed information on the hike!</a>
 
         <h2>Best things to see</h2>
         <div>
