Add and style killarney.html images

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <h2>Why Visit?</h2>
             <p id="why-visit-p">Ireland is well known for its beautiful landscapes and vivid colors. If you want to use your time well and see some of it's most stunning treasures, explore our website so you don't miss out on anything. Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check out our webpage and go enjoy your time among nature. And remember, respect the mountains, and keep safe.</p>
             <div id="home-div-photos">
-                <img src="assets/images/why-visit.jpg" alt="Beautiful landscape" class="why-visit-photos">
-                <img src="assets/images/why-visit-1.jpg" alt="Coastal landscape" class="why-visit-photos">
-                <img src="assets/images/why-visit-2.jpg" alt="Plains landscape" class="why-visit-photos">
-                <img src="assets/images/why-visit-3.jpg" alt="Mountain landscape" class="why-visit-photos">
+                <img src="assets/images/home-images/why-visit.jpg" alt="Beautiful landscape" class="why-visit-photos">
+                <img src="assets/images/home-images/why-visit-1.jpg" alt="Coastal landscape" class="why-visit-photos">
+                <img src="assets/images/home-images/why-visit-2.jpg" alt="Plains landscape" class="why-visit-photos">
+                <img src="assets/images/home-images/why-visit-3.jpg" alt="Mountain landscape" class="why-visit-photos">
             </div>
         </div>
 
@@ -42,7 +42,7 @@
 
         <div id="where">
             <h2>Where are they?</h2>
-            <img src="assets/images/national-parks-map.jpg" alt="Map of Ireland's national parks" id="national-parks-map">
+            <img src="assets/images/home-images/national-parks-map.jpg" alt="Map of Ireland's national parks" id="national-parks-map">
         </div>
 
         <br>
