--- a/killarney.html
+++ b/killarney.html
@@ -47,33 +47,74 @@
             <li>Follow the path untul you see a parking lot</li>
             <li>Your hike has finished!</li>
         </ol>
-        <img id="killarney-hike-map" src="assets/images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
+        <img id="killarney-hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
         </div>
         <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Click here for more detailed information on the hike!</a>
 
         <h2>Best things to see</h2>
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
+        <div class="div-parks-images">
+            <div>
+                <img src="assets/images/killarney-images/killarney_butterfly.JPG" alt="Marsh Fritillary (Euphydryas aurinia)" class="parks-images">
+                <figcaption>Marsh Fritillary (Euphydryas aurinia)</figcaption>
+            </div>
+            <div>            
+                <img src="assets/images/killarney-images/killarney-bat.jpg" alt="Lesser Horseshoe Bat (Rhinolophus hipposideros)" class="parks-images">
+                <figcaption>Lesser Horseshoe Bat (Rhinolophus hipposideros)</figcaption>
+            </div>
+            <div>
+                <img src="assets/images/killarney-images/killarney-salmon.jpg" alt="Atlantic salmon (Salmo salar)" class="parks-images">
+                <figcaption>Atlantic salmon (Salmo salar)</figcaption>
+            </div>
+            <div>
+                <img src="assets/images/killarney-images/killarney-stonechat.jpg" alt="Stonechat (Saxicola torquata)" class="parks-images">
+                <figcaption>Stonechat (Saxicola torquata)</figcaption>
+            </div>
+            <div>
+                <img src="assets/images/killarney-images/killarney-deer.jpg" alt="Sika Stags (Cervus nippon)" class="parks-images">
+                <figcaption>Sika Stags (Cervus nippon)</figcaption>
+            </div>
 
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
+            <br>
 
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <div class="views-images">
+                <img src="assets/images/killarney-images/killarney-aghadoe.jpg" alt="View from Aghadoe" class="parks-images">
+                <figcaption>View from Aghadoe</figcaption>
+            </div>
+            <div class="views-images">            
+                <img src="assets/images/killarney-images/killarney-ladies-view.jpg" alt="Ladies' View" class="parks-images">
+                <figcaption>Ladies' View</figcaption>
+            </div>
+            <div class="views-images">
+                <img src="assets/images/killarney-images/killarney-strickeen.jpg" alt="View from Strickeen Mountain" class="parks-images">
+                <figcaption>View from Strickeen Mountain</figcaption>
+            </div>
+            <div class="views-images">
+                <img src="assets/images/killarney-images/killarney-tork-mountain.jpg" alt="View from Tork Mountain" class="parks-images">
+                <figcaption>View from Tork Mountain</figcaption>
+            </div>
+
+            <br>
+
+            <div>
+                <img src="assets/images/killarney-images/aghadoe-ruins.jpg" alt="Aghadoe Ruins" class="parks-images">
+                <figcaption>Aghadoe Ruins</figcaption>
+            </div>
+            <div>            
+                <img src="assets/images/killarney-images/inisfallen-ruins.jpg" alt="Inisfallen Ruins" class="parks-images">
+                <figcaption>Inisfallen Ruins</figcaption>
+            </div>
+            <div>
+                <img src="assets/images/killarney-images/muckross-abbey.jpg" alt="Muckross Abbey" class="parks-images">
+                <figcaption>Muckross Abbey</figcaption>
+            </div>
+            <div>
+                <img src="assets/images/killarney-images/old-weir-bridge.JPG" alt="Old Weir Bridge" class="parks-images">
+                <figcaption>Old Weir Bridge</figcaption>
+            </div>
+            <div>
+                <img src="assets/images/killarney-images/ross-castle.jpg" alt="Ross Castle" class="parks-images">
+                <figcaption>Ross Castle</figcaption>
+            </div>
         </div>
 
         <footer>
