Finish fixing mobile responsiveness

--- a/killarney.html
+++ b/killarney.html
@@ -50,7 +50,9 @@
             <img id="killarney-hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
         </div>
         
-        <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Click here for more detailed information on the hike!</a>
+        <div class="hike-link-div">
+        <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Hike Details</a>
+        </div>
 
         <h2 class="parks-heading">Best things to see</h2>
         <div class="div-parks-images">
