Style glenveagh.html

--- a/glenveah.html
+++ b/glenveah.html
@@ -28,95 +28,92 @@
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Killarney National Park</h2>
-            <p>South and west of the town of Killarney in Co. Kerry is an expanse of rugged mountainous country. This includes the McGillycuddy’s Reeks, the highest mountain range in Ireland which rise to a height of over 1000 metres. At the foot of these mountains nestle the world famous lakes of Killarney. Here where the mountains sweep down to the lake shores, their lower slopes covered in woodlands, lies the 10,236 hectare (26,000 acres), Killarney National Park . The distinctive combination of mountains, lakes, woods and waterfalls under ever changing skies gives the area a special scenic beauty. Killarney National Park contains many features of national and international importance such as the native oakwoods and yew woods together with an abundance of evergreen trees and shrubs and a profusion of bryophytes and lichens which thrive in the mild Killarney climate. The native red deer are unique in Ireland with a presence in the country since the last Ice Age. Killarney National Park was designated as a Biosphere Reserve in 1981 by the United Nations Educational, Scientific and Cultural Organisation (UNESCO), part of a world network of natural areas which have conservation, research, education and training as major objectives.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.0567014805224!2d-9.5561803!3d52.0058447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453e3ee43de413%3A0x9d8826b96949907a!2sKillarney%20National%20Park!5e0!3m2!1sen!2sie!4v1666913611513!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h2 class="parks-heading">Glenveah National Park</h2>
+            <p>Glenveagh, meaning 'glen of the birches', is the second-largest national park in Ireland. Located in County Donegal, it includes Glenveagh Castle grounds, Lough Veagh, and much of the Derryveagh Mountains.Glenveagh National Park is a remote and hauntingly beautiful wilderness of rugged mountains, pristine lakes, tumbling waterfalls and enchanted native oak woodland in the heart of the Derryveagh Mountains in the north west of County Donegal. </p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2285.1795246656407!2d-7.939875584310081!3d55.0575907528609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485f9baad6bd66ab%3A0x2f5ffa4705e86fad!2sGlenveagh%20National%20Park!5e0!3m2!1sen!2ses!4v1667344794294!5m2!1sen!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </div>
 
         <div id="recommended">
-            <h2 class="parks-heading">Recommended hike: Old Kenmare Road</h2>
+            <h2 class="parks-heading">Recommended hike: Glenveagh Lakeside Walk</h2>
             <ol>
-                <li>Begin at the upper car park of Torc Mountain</li>
-                <li>Follow the trail and head towards the shoulder of Torc Mountain</li>
-                <li>Take an immediate left after crossing a wooden bridge</li>
-                <li>Follow the path as you exit the woodlands</li>
-                <li>Keep following the path through a boarwalked path for a few kilometres</li>
-                <li>As you reach the Cores Cascade head back into the woodlands</li>
-                <li>Folow the path until you reach the paved road</li>
-                <li>Take a left turn</li>
-                <li>Follow the path until you see a parking lot</li>
-                <li>Your hike has finished!</li>
+                <li>Begin at the bus stop near the Visitor Center</li>
+                <li>Walk through the Austrian Pines</li>
+                <li>Reach a wooden boathouse</li>
+                <li>Cross a recently built bridge</li>
+                <li>Reach an open landscape with bogs</li>
+                <li>Cross the open landscape until you reach the Glenveagh Castle gardens</li>
+                <li>Your hike is done!</li>
             </ol>
-            <img id="killarney-hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
+            <img class="hike-map" src="assets/images/glenveagh/glenveagh-hike.png" alt="Map of Glenveagh Lakeside walk">
         </div>
         
         <div class="hike-link-div">
-        <a href="https://killarneyguide.ie/old-kenmare-road/" target="_blank" id="hike-link">Hike Details</a>
+        <a href="https://www.glenveaghnationalpark.ie/lakeside-walk//" target="_blank" id="hike-link">Hike Details</a>
         </div>
 
         <h2 class="parks-heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
-                <img src="assets/images/killarney-images/killarney_butterfly.JPG" alt="Marsh Fritillary (Euphydryas aurinia)" class="parks-images">
-                <figcaption>Marsh Fritillary (Euphydryas aurinia)</figcaption>
+                <img src="assets/images/glenveagh/smooth-newt.webp" alt="Smooth Newt (Lissotriton vulgaris)" class="parks-images">
+                <figcaption>Smooth Newt (Lissotriton vulgaris)</figcaption>
             </div>
             <div>            
-                <img src="assets/images/killarney-images/killarney-bat.jpg" alt="Lesser Horseshoe Bat (Rhinolophus hipposideros)" class="parks-images">
-                <figcaption>Lesser Horseshoe Bat (Rhinolophus hipposideros)</figcaption>
+                <img src="assets/images/glenveagh/brown-trout.jpg" alt="Brown Trout (Salmo trutta)" class="parks-images">
+                <figcaption>Brown Trout (Salmo trutta)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-salmon.jpg" alt="Atlantic salmon (Salmo salar)" class="parks-images">
-                <figcaption>Atlantic salmon (Salmo salar)</figcaption>
+                <img src="assets/images/glenveagh/red-throated-diver.jpg" alt="Red-throated Diver (Gavia stellata)" class="parks-images">
+                <figcaption>Red-throated Diver (Gavia stellata)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-stonechat.jpg" alt="Stonechat (Saxicola torquata)" class="parks-images">
-                <figcaption>Stonechat (Saxicola torquata)</figcaption>
+                <img src="assets/images/glenveagh/red-deer.jpg" alt="Red Deer (Cervus elaphus)" class="parks-images">
+                <figcaption>Red Deer (Cervus elaphus)</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/killarney-deer.jpg" alt="Sika Stags (Cervus nippon)" class="parks-images">
-                <figcaption>Sika Stags (Cervus nippon)</figcaption>
+                <img src="assets/images/glenveagh/otter.jpg" alt="Otter (Lutra lutra)" class="parks-images">
+                <figcaption>Otter (Lutra lutra)</figcaption>
             </div>
 
             <br>
 
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-aghadoe.jpg" alt="View from Aghadoe" class="parks-images">
-                <figcaption>View from Aghadoe</figcaption>
+                <img src="assets/images/glenveagh/malin-head.jpg" alt="Malin head" class="parks-images">
+                <figcaption>Malin head</figcaption>
             </div>
             <div class="views-images">            
-                <img src="assets/images/killarney-images/killarney-ladies-view.jpg" alt="Ladies' View" class="parks-images">
-                <figcaption>Ladies' View</figcaption>
+                <img src="assets/images/glenveagh/mount-errigal.jpg" alt="Mount Errigal" class="parks-images">
+                <figcaption>Mount Errigal</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-strickeen.jpg" alt="View from Strickeen Mountain" class="parks-images">
-                <figcaption>View from Strickeen Mountain</figcaption>
+                <img src="assets/images/glenveagh/poisoned-glen.jpg" alt="Poisoned Glen" class="parks-images">
+                <figcaption>Poisoned Glen</figcaption>
             </div>
             <div class="views-images">
-                <img src="assets/images/killarney-images/killarney-tork-mountain.jpg" alt="View from Tork Mountain" class="parks-images">
-                <figcaption>View from Tork Mountain</figcaption>
+                <img src="assets/images/glenveagh/slieve-league-cliffs.jpg" alt="Slieve League Cliffs" class="parks-images">
+                <figcaption>Slieve League Cliffs</figcaption>
             </div>
 
             <br>
 
             <div>
-                <img src="assets/images/killarney-images/aghadoe-ruins.jpg" alt="Aghadoe Ruins" class="parks-images">
-                <figcaption>Aghadoe Ruins</figcaption>
+                <img src="assets/images/glenveagh/creevykeel-court-tomb.jpg" alt="Creevykeel Court Tomb" class="parks-images">
+                <figcaption>Creevykeel Court Tomb</figcaption>
             </div>
             <div>            
-                <img src="assets/images/killarney-images/inisfallen-ruins.jpg" alt="Inisfallen Ruins" class="parks-images">
-                <figcaption>Inisfallen Ruins</figcaption>
+                <img src="assets/images/glenveagh/donegal-castle.jpg" alt="Donegal Castle" class="parks-images">
+                <figcaption>Donegal Castle</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/muckross-abbey.jpg" alt="Muckross Abbey" class="parks-images">
-                <figcaption>Muckross Abbey</figcaption>
+                <img src="assets/images/glenveagh/dunlewey-church.jpg" alt="Dunlewey Church" class="parks-images">
+                <figcaption>Dunlewey Church</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/old-weir-bridge.JPG" alt="Old Weir Bridge" class="parks-images">
-                <figcaption>Old Weir Bridge</figcaption>
+                <img src="assets/images/glenveagh/glencolmcille-tower.jpg" alt="Glencolmcille Tower" class="parks-images">
+                <figcaption>Glencolmcille Tower</figcaption>
             </div>
             <div>
-                <img src="assets/images/killarney-images/ross-castle.jpg" alt="Ross Castle" class="parks-images">
-                <figcaption>Ross Castle</figcaption>
+                <img src="assets/images/glenveagh/glenveagh-castle.jpg" alt="Glenveagh Castle" class="parks-images">
+                <figcaption>Glenveagh Castle</figcaption>
             </div>
         </div>
 
