--- a/killarney.html
+++ b/killarney.html
@@ -47,7 +47,7 @@
                 <li>Follow the path until you see a parking lot</li>
                 <li>Your hike has finished!</li>
             </ol>
-            <img id="killarney-hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
+            <img class="hike-map" src="assets/images/killarney-images/killarney-hike-map.png" alt="Map of Old Kenmare Road">
         </div>
         
         <div class="hike-link-div">
